# aim-cmake-samples

mylib/: CMakeLists.txt  config.bat  create.bat
