cmake_minimum_required(VERSION 3.0)
project(mylib VERSION 0.1.0 DESCRIPTION "mylib sample")
add_library(mylib SHARED mylib.c)
set_target_properties(mylib PROPERTIES VERSION ${PROJECT_VERSION})
set_target_properties(mylib PROPERTIES SOVERSION 0)
set_target_properties(mylib PROPERTIES PUBLIC_HEADER mylib.h)